refactor(openvex): address maintainer review feedback on matching, schema, and subcomponents